kubernetes/apps/keycloak/keycloak-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-auth
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https-subdomains
  hostnames:
    - auth.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realms
        - path:
            type: PathPrefix
            value: /resources
      backendRefs:
        - name: keycloak-instance-service
          port: 8080
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /realms/home-ops/account
          type: RequestRedirect
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-all
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https-subdomains
  hostnames:
    - keycloak.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-instance-service
          port: 8080
